Integrate AlonsoLevels and refactor block restrictions
Added AlonsoLevels-v2.4-BETA.jar and integrated AlonsoLevels API for player level and experience bar updates. Merged WorldChangeListener logic into PlayerRestrictionListener, removing the former. Refactored join/quit/disguise listeners and tablist/nametag managers to handle real/disguised identities and update displays for all players. Added configurable jump pad settings and improved block interaction restrictions. Updated PlayerVisibilityManager to use Bukkit's hide/showPlayer methods and improved handling of player join/quit events.