@@ -4,6 +4,7 @@ import center.bedwars.lobby.Lobby;
 import center.bedwars.lobby.configuration.configurations.NametagConfiguration;
 import center.bedwars.lobby.configuration.configurations.TablistConfiguration;
 import center.bedwars.lobby.dependency.DependencyManager;
+import center.bedwars.lobby.dependency.dependencies.PhoenixDependency;
 import center.bedwars.lobby.dependency.dependencies.PlaceholderAPIDependency;
 import center.bedwars.lobby.manager.Manager;
 import center.bedwars.lobby.nametag.NametagFormatter;
@@ -17,6 +18,8 @@ import net.minecraft.server.v1_8_R3.PacketPlayOutPlayerInfo;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.scheduler.BukkitTask;
+import xyz.refinedev.phoenix.Phoenix;
+import xyz.refinedev.phoenix.profile.IProfile;
 import xyz.refinedev.phoenix.rank.IRank;
 
 import java.lang.reflect.Field;
@@ -121,31 +124,69 @@ public class TablistManager extends Manager {
         if (nametagManager == null) return;
 
         NametagFormatter formatter = nametagManager.getFormatter();
-
         List<PlayerEntry> entries = new ArrayList<>();
 
         for (Player player : Bukkit.getOnlinePlayers()) {
-            String rankName = nametagManager.getPlayerRankName(player);
-            String displayName = nametagManager.getPlayerDisplayName(player);
+            UUID realUUID = getRealUUID(player);
+            String rankName = getPlayerRankName(realUUID);
 
             NametagConfiguration.GroupConfig config = formatter.getConfig(player, rankName);
 
             String tabPrefix = formatter.parsePlaceholders(player, config.tabprefix);
             String tabSuffix = formatter.parsePlaceholders(player, config.tabsuffix);
-            String formattedName = ColorUtil.color(tabPrefix) + displayName + ColorUtil.color(tabSuffix);
+            String formattedName = ColorUtil.color(tabPrefix) + player.getName() + ColorUtil.color(tabSuffix);
 
             entries.add(new PlayerEntry(player, formattedName, 0, null));
         }
 
         entries.sort((a, b) -> {
-            String rankA = nametagManager.getPlayerRankName(a.player());
-            String rankB = nametagManager.getPlayerRankName(b.player());
+            UUID realUUIDA = getRealUUID(a.player());
+            UUID realUUIDB = getRealUUID(b.player());
+            String rankA = getPlayerRankName(realUUIDA);
+            String rankB = getPlayerRankName(realUUIDB);
             return sortingManager.compare(a.player(), b.player(), rankA, rankB);
         });
 
         for (PlayerEntry entry : entries) {
             updatePlayerDisplayName(viewer, entry);
         }
+    }
+
+    private String getPlayerRankName(UUID realUUID) {
+        PhoenixDependency phoenixDependency = getPhoenixDependency();
+        if (phoenixDependency == null || !phoenixDependency.isApiAvailable()) {
+            return "Default";
+        }
+
+        Phoenix api = phoenixDependency.getApi();
+        IRank rank = api.getGrantHandler().getHighestRank(realUUID);
+
+        return rank != null ? rank.getName() : "Default";
+    }
+
+    private UUID getRealUUID(Player player) {
+        PhoenixDependency phoenixDependency = getPhoenixDependency();
+        if (phoenixDependency == null || !phoenixDependency.isApiAvailable()) {
+            return player.getUniqueId();
+        }
+
+        try {
+            Phoenix api = phoenixDependency.getApi();
+            IProfile profile = api.getProfileHandler().getProfile(player.getUniqueId());
+            if (profile != null && profile.getDisguiseData().isDisguised()) {
+                Player realPlayer = Bukkit.getPlayer(profile.getDisguiseData().getRealName());
+                if (realPlayer != null) {
+                    return realPlayer.getUniqueId();
+                }
+            }
+        } catch (Exception ignored) {}
+
+        return player.getUniqueId();
+    }
+
+    private PhoenixDependency getPhoenixDependency() {
+        DependencyManager dependencyManager = Lobby.getManagerStorage().getManager(DependencyManager.class);
+        return dependencyManager != null ? dependencyManager.getPhoenix() : null;
     }
 
     private void updatePlayerDisplayName(Player viewer, PlayerEntry entry) {
@@ -158,18 +199,17 @@ public class TablistManager extends Manager {
             Field field = packet.getClass().getDeclaredField("b");
             field.setAccessible(true);
 
-            @SuppressWarnings("unchecked")
             List<PacketPlayOutPlayerInfo.PlayerInfoData> dataList =
                     (List<PacketPlayOutPlayerInfo.PlayerInfoData>) field.get(packet);
 
             if (dataList != null && !dataList.isEmpty()) {
-                Field displayNameField = dataList.get(0).getClass().getDeclaredField("e");
+                Field displayNameField = dataList.getFirst().getClass().getDeclaredField("e");
                 displayNameField.setAccessible(true);
 
                 IChatBaseComponent component = IChatBaseComponent.ChatSerializer.a(
                         "{\"text\":\"" + entry.displayName().replace("\"", "\\\"") + "\"}"
                 );
-                displayNameField.set(dataList.get(0), component);
+                displayNameField.set(dataList.getFirst(), component);
             }
 
             NMSHelper.sendPacket(viewer, packet);
